# cursor-plans

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HOW-TO.md  README.md  SCHEMA.md  SETUP.md  pyproject.toml  restart-mcp.sh
.github/: WORKFLOWS.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
src/cursor_plans_mcp/: __init__.py  schema.py  server.py
src/cursor_plans_mcp/dsl/: __init__.py
src/cursor_plans_mcp/execution/: __init__.py  command_executor.py  engine.py  planner.py  snapshot.py  template_processor.py
src/cursor_plans_mcp/state/: __init__.py
src/cursor_plans_mcp/templates/: __init__.py  engine.py
src/cursor_plans_mcp/templates/languages/csharp/: commands.py  config.yaml  generators.py
src/cursor_plans_mcp/validation/: __init__.py  engine.py  results.py
src/cursor_plans_mcp/validation/validators/: __init__.py  base.py  constraints.py  context.py  cursor_rules.py  logic.py  schema.py  syntax.py
tests/: __init__.py  conftest.py  test_command_executor.py  test_csharp_console.py  test_csharp_generators.py  test_csharp_templates.py  test_dependency_resolver.py  test_dotnet_templates.py  test_execution_engine.py  test_init_tool.py  test_mcp_tools.py  test_name_resolution.py  test_permission_handling.py  test_schema_documentation.py  test_snapshot_system.py  test_template_engine.py  test_template_implementation.py  test_templates.py  test_validation_engine.py
